--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "name": "solcases",
   "version": "0.1.0",
   "private": true,
+}
+  "engines": {
+    "node": "16.13.0",
+    "npm": "8.1.3",
+  }
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "node-sass": "^6.0.1",
+    "nodejs": "^16.13.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
